hw2-v3/log/build_2022-10-24_23-03-30/hw2_assignment/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/haydenccarroll/Repositories/create3_examples_ws/src/hw2_assignment/install/hw2_assignment/lib/python3.10/site-packages/hw2_assignment/odom_sub.py", line 3
    from irobot_create_msgs.msg import 
                                       ^
SyntaxError: invalid syntax

